<resources>
    <string name="app_name">InClass07</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_label">Delete</string>
    <string name="contact_list_label">Contacts List</string>
    <string name="add_contact_label">Add Contact</string>
    <string name="edit_button_label">Edit</string>
    <string name="delete_dialog_confirmation">Are you sure you want to delete this contact? This action cannot be undone</string>
    <string name="toast_delete_successful">Contact deleted successfully</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="type_label">Type:</string>
    <string name="home_label">Home</string>
    <string name="cell_label">Cell</string>
    <string name="office_label">Office</string>
    <string name="update_label">Update</string>
    <string name="name_label">Name</string>
    <string name="email_label">Email</string>
    <string name="phone_label">Phone</string>
    <string name="toast_mandatory_fields">All fields are mandatory</string>
    <string name="contact_detail_label">Contact Detail</string>
    <string name="update_contact_label">Update Contact</string>
    <string name="create_contact_label">Create Contact</string>
    <string name="missing_field_dialog">All fields are mandatory</string>
    <string name="okay_label">Okay</string>
    <string name="cancel_label">Cancel</string>
    <string name="phone_numeric_dialog">Phone number cannot contain any special characters or letters</string>
    <string name="error_label">Error: </string>
    <string name="error_message">Something went wrong</string>
    <string name="create_label">Create</string>
    <string name="zero_contacts_label">No contacts to display</string>
    <string name="edit_dialog_confirmation">Are you sure you want to update this contact?</string>
</resources>